# OpenMM2gmx

./: .gitattributes  .gitignore  GPCR_Case.ipynb  OpenMM2gmx.py  PROTOCOLE  README.md  example_file.mdp  pyproject.toml  requirements.txt
GPCR_case/: after_centering.html  before_centering.html  topology.parm7  traj.dcd  traj.xml
MD_output/: GPCR_centered.gro  GPCR_centered.top  GPCR_centered.tpr  GPCR_centered_index.ndx  GPCR_centered_nojump.xtc  GPCR_centered_trj.xtc  GPCR_centered_trj_no_jump_centered_full_complex.xtc
src/OpenMM2gmx/: __main__.py
src/OpenMM2gmx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
